aligning the plus div so when the form is rendered lines up correctly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,14 +77,21 @@ body {
   float: left;
 }
 
+.plant-form {
+  clear: left;
+  height: 100%;
+  width: 146px;
+  margin: 10px;
+  padding: 10px;
+  border: 4px solid #f77825;
+  border-radius: 5px;
+}
+
 .plus {
   background: url("/images/Add-New.png");
   background-size: 100%;
-  height: 168px;
-  width: 168px;
-  margin: 10px;
-  border: 4px solid #f77825;
-  border-radius: 5px;
+  height: 146px;
+  width: 100%;
 }
 
 .tweets {
